automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <h1>Zetsy</h1>
 
-      <img src = "images/necklace.jpg" alt="Supposedly hand-crafted Navajo turquoise necklace">
+      <img src = "images/necklace.jpg" alt="Supposedly hand-crafted Navajo turquoise necklace" class = "featured">
 
       <h2>About</h2>
 
