automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h2>Press</h2>
 
       <!-- press images -->
-      <a href = "http://nmai.si.edu"><img src = "images/nmai-logo.png" alt="NMAI Logo" class = "featured"></a>
+      <a href = "http://nmai.si.edu" class = "featured"><img src = "images/nmai-logo.png" alt="NMAI Logo" class = "featured"></a>
       <a href = "http://www.nytimes.com/pages/t-magazine/"><img src = "images/times-logo.png" alt = "New York Times"></a>
       <a href = "http://www.sedonamonthly.com"><img src = "images/sedona-logo.png" alt = "Sedona Monthly"></a>
       <a href = "ttp://www.bergdorfgoodman.com/"><img src = "images/bergdorf-logo.png" alt = "Bergdorf Goodman"></a>
