automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -38,15 +38,19 @@
         stores of Bergdorf Goodman.</p>
       </section>
 
-      <h2>Press</h2>
+      <section id = "press">
+        <h2>Press</h2>
 
-      <!-- press images -->
-      <a href = "http://nmai.si.edu" class = "featured"><img src = "images/nmai-logo.png" alt="NMAI Logo" class = "featured"></a>
-      <a href = "http://www.nytimes.com/pages/t-magazine/"><img src = "images/times-logo.png" alt = "New York Times"></a>
-      <a href = "http://www.sedonamonthly.com"><img src = "images/sedona-logo.png" alt = "Sedona Monthly"></a>
-      <a href = "ttp://www.bergdorfgoodman.com/"><img src = "images/bergdorf-logo.png" alt = "Bergdorf Goodman"></a>
+        <!-- press images -->
+        <a href = "http://nmai.si.edu" class = "featured"><img src = "images/nmai-logo.png" alt="NMAI Logo" class = "featured"></a>
+        <a href = "http://www.nytimes.com/pages/t-magazine/"><img src = "images/times-logo.png" alt = "New York Times"></a>
+        <a href = "http://www.sedonamonthly.com"><img src = "images/sedona-logo.png" alt = "Sedona Monthly"></a>
+        <a href = "ttp://www.bergdorfgoodman.com/"><img src = "images/bergdorf-logo.png" alt = "Bergdorf Goodman"></a>
+      </section>
 
-      <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
+      <footer>
+        <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
+      </footer>
     </div>
   </body>
 </html>
