--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <body>
     <div class="wrapper">
-      <h1><a href = "#">Zetsy</a></h1>
+      <header>
+        <h1><a href = "#">Zetsy</a></h1>
+      </header>
       <section id = "featured">
         <img src = "images/necklace.jpg" alt="Supposedly hand-crafted Navajo turquoise necklace">
 
